--- a/post-hub/src/sass/style.scss
+++ b/post-hub/src/sass/style.scss
@@ -1,3 +1,5 @@
-p {
-    color: red;
-}
+@import 'helpers/normalize.scss';
+@import 'helpers/variables';
+@import 'helpers/general.scss';
+
+@import './components/header';
