adding basic styles for posts

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,5 +4,7 @@
 
 @import './components/header';
 @import './components/BreadCrumb';
+@import './components/Post';
 
 @import './Pages/signUp';
+@import './Pages/Home';
