--- a/src/sass/helpers/_general.scss
+++ b/src/sass/helpers/_general.scss
@@ -4,12 +4,12 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 
-.wrapper {
+.hidden {
+	display: none;
+}
+
+.content-wrapper {
 	max-width: 90%;
 	margin: 0 auto;
 	padding-top: 60px;
-}
-
-.hidden {
-	display: none;
 }
