--- a/src/sass/components/_Post.scss
+++ b/src/sass/components/_Post.scss
@@ -48,11 +48,11 @@
 }
 
 .post-header__profile-image {
-    width: 40px;
-    height: 40px;
     border-radius: 50%;
+    height: 40px;
     margin-right: 10px;
-    object-fit: fill;
+    object-fit: cover;
+    width: 40px;
 }
 
 .post-asset-container {
