Corrijo error de actualizacion de menu y agrego seccion de perfil de usuario

--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -7,7 +7,7 @@ $white: #fff;
 $yellow: #fdbb2d;
 $gray: #777;
 
-$primaryColor: #FFBD35;
+$primaryColor: #000;
 
 $gradient: linear-gradient(0deg, #22c1c3 20%, #bfbb7b 80%, #fdbb2d 100%);
 $footer-gradient: linear-gradient(0deg, #22c1c3 -28%, #bfbb7b 111%, #fdbb2d 273%);
