--- a/src/sass/components/_Post.scss
+++ b/src/sass/components/_Post.scss
@@ -55,6 +55,20 @@
     width: 40px;
 }
 
+.post-header__options {
+    cursor: pointer;
+}
+
+.post-header__username a{
+    font-size: 18px;
+    color: #000;
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 .post-asset-container {
     width: 100%;
     max-height: 600px;
