--- a/src/sass/components/_Post.scss
+++ b/src/sass/components/_Post.scss
@@ -63,6 +63,7 @@
     font-size: 18px;
     color: #000;
     cursor: pointer;
+    text-decoration: none;
 
     &:hover {
         text-decoration: underline;
@@ -89,10 +90,15 @@
         margin-bottom: 10px;
 
         button {
-        background: none;
-        border: none;
-        cursor: pointer;
-        font-size: 24px;
+            background-color: transparent;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            border: none;
+            cursor: pointer;
+            font-size: 24px;
+            height: 28px;
+            width: 28px;
         }
     }
 
@@ -109,6 +115,15 @@
         font-size: 12px;
         color: #8e8e8e;
     }
+}
+
+.post-content__like-btn:active {
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.post-content__comment-btn {
+    background-image: url('../../assets/comment.svg');
 }
 
 .post-footer {
