I updated the navigation for mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
 @import './helpers/general.scss';
 
 @import './components/header';
+@import './components/nav';
 @import './components/BreadCrumb';
 @import './components/Post';
 
