I added the option to send an email to an existing user

--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -6,6 +6,8 @@ $title-font: 'Raleway', sans-serif;
 $white: #fff;
 $yellow: #fdbb2d;
 $gray: #777;
+$green: #83b106;
+$red: #dc2626;
 
 $primaryColor: #000;
 
