--- a/src/sass/Pages/_signUp.scss
+++ b/src/sass/Pages/_signUp.scss
@@ -42,13 +42,13 @@ label {
 }
 
 .form__button-cancel {
-	background-color: #ffffff;
-    border: 1px solid #dc2626;
-    color: #dc2626;
+	background-color: $white;
+    border: 1px solid $red;
+    color: $red;
 
 	&:hover {
-		color: #ffffff;
-		background-color: #dc2626;
+		color: $white;
+		background-color: $red;
 		transition: 0.5s;
 	}
 	&:active {
@@ -58,9 +58,9 @@ label {
 }
 
 .form__button-save {
-	background-color: #83b106;
-	border: 2px solid #83b106;
-	color: #fff;
+	background-color: $green;
+	border: 2px solid $green;
+	color: $white;
 
 	&:hover {
 		background-color: #000;
@@ -150,9 +150,9 @@ label {
 }
 
 ::-webkit-file-upload-button {
-	background: #83b106;
+	background: $green;
 	border-radius: 5px;
-	border: 2px solid #83b106;
+	border: 2px solid $green;
 	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
 	color: #000;
 	outline: none;
@@ -160,8 +160,8 @@ label {
 }
 
 ::-webkit-file-upload-button:hover {
-	background-color: #fff;
-	border: 2px solid #83b106;
+	background-color: $white;
+	border: 2px solid $green;
 	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
 	color: #000;
 	transition: 0.5s;
