--- a/src/sass/Pages/_logIn.scss
+++ b/src/sass/Pages/_logIn.scss
@@ -10,3 +10,15 @@
         text-decoration: none;
     }
 }
+
+.form__item-password {
+    position: relative;
+}
+
+.show-password-btn {
+    position: absolute;
+    top: 50%;
+    right: 2%;
+    border: none;
+    background-color: transparent;
+}
