--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -3,8 +3,6 @@
 	background: none;
 	border: none;
 	color: #fff;
-	position: fixed;
-	right: 5%;
   cursor: pointer;
 }
 
@@ -14,7 +12,7 @@
   justify-content: space-around;
   height: 100%;
   margin: 0;
-  width: 40%;
+  width: 100%;
 }
 
 .nav-container {
@@ -30,10 +28,15 @@
   justify-content: center;
 }
 
-.nav-container.top {
+.nav-container__top {
   width: 90%;
-  justify-content: initial;
+  justify-content: space-between;
   align-items: center;
+}
+
+.nav-container__bottom {
+  width: 40%;
+  left: 30%;
 }
 
 .nav-container h1 {
@@ -67,13 +70,15 @@
     background-color: $primaryColor;
   }
 
-  .nav-container.top {
+  .nav-container__top {
     width: 90%;
-    justify-content: initial;
+    justify-content: space-between;
   }
 
-  .nav-container.bottom {
+  .nav-container__bottom {
     bottom: 0;
+    width: 100%;
+    left: 0;
   }
 
   .menu__container {
