I added the option to add comments

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,8 +4,8 @@
 
 @import './components/header';
 @import './components/nav';
-@import './components/BreadCrumb';
-@import './components/Post';
+@import './components/breadCrumb';
+@import './components/post';
 
 @import './Pages/signUp';
 @import './Pages/Home';
