--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,6 @@
 @import './components/post';
 
 @import './Pages/signUp';
-@import './Pages/Home';
+@import './Pages/home';
 @import './Pages/profile';
 @import './Pages/logIn';
