--- a/src/sass/components/_post.scss
+++ b/src/sass/components/_post.scss
@@ -192,5 +192,6 @@ border-top: 1px solid #dbdbdb;
 }
 
 .post-content__comment-date {
-    color: #4F4F4F;
+    font-size: 12px;
+    color: #8e8e8e;
 }
